# magi-engine

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake  magi_engine
docs/: README.md  roadmap.md
docs/blocks/: attention.md  gated_mlp.md  ops.md  rope.md  tensor.md
docs/visualizations/: gqa.html  matmul_2d_visualization.html  matmul_transposed_b_visualization.html  mmap_loading_visualization.html  rope_visualization.html  strides_visualization.html
src/: layers.cpp  layers.h  main.cpp  mmap.cpp  mmap.h  model_config.h  ops.cpp  ops.h  tensor.cpp  tensor.h  utils.cpp  utils.h
tests/: test_golden.cpp  test_layers.cpp  test_main.cpp  test_mmap.cpp  test_ops.cpp  test_tensor.cpp  test_utils.h
tools/: gen_dummy_weights.py  gen_golden_weights.py
